@@ -1,9 +1,6 @@
 package com.example.lollandback.board.order.controller;
 
-import com.example.lollandback.board.order.dto.OrderRequestDto;
-import com.example.lollandback.board.order.dto.OrderResDto;
-import com.example.lollandback.board.order.dto.PaymentRequestDto;
-import com.example.lollandback.board.order.dto.PaymentSuccessDto;
+import com.example.lollandback.board.order.dto.*;
 import com.example.lollandback.board.order.exception.CustomLogicException;
 import com.example.lollandback.board.order.service.OrderService;
 import com.example.lollandback.member.domain.Member;
@@ -14,6 +11,8 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.Collections;
+import java.util.List;
+import java.util.Map;
 
 @RestController
 @RequiredArgsConstructor
@@ -21,10 +20,48 @@ import java.util.Collections;
 public class OrderController {
     private final OrderService orderService;
 
+    @GetMapping("/my")
+    public ResponseEntity fetchMyOrderInfo(@SessionAttribute("login") Member login) {
+        Long member_id = login.getId();
+        try{
+            List<OrderInfoDto> orderInfo = orderService.fetchMyOrderInfo(member_id);
+            return ResponseEntity.ok(orderInfo);
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
+        }
+    }
+
+    @GetMapping("/order-info")
+    public ResponseEntity fetchOrderInfoDetail(@SessionAttribute("login") Member login, @RequestParam Long orderId) {
+        try{
+            OrderInfoDetailDto orderInfo = orderService.fetchOrderInfoDetail(orderId);
+            if(orderInfo.member_id != login.getId()) {
+                return ResponseEntity.status(HttpStatus.UNAUTHORIZED).build();
+            }
+            return ResponseEntity.ok(orderInfo);
+        } catch (Exception e) {
+            e.printStackTrace();
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
+        }
+    }
+
+    @PostMapping("/cancel-wait")
+    public ResponseEntity cancelOrderRequest(@SessionAttribute("login") Member login,
+                                             @RequestBody CancelRequestDto dto) {
+        try {
+            orderService.cancelWaitOrderStatus(dto.getOrderId());
+            return ResponseEntity.ok().build();
+        } catch (CustomLogicException e) {
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST)
+                    .body(Collections.singletonMap("error", e.getMessage()));
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                    .body(Collections.singletonMap("error", e.getMessage()));
+        }
+    }
+
     @PostMapping("/toss")
     public ResponseEntity createOrderInfo(@SessionAttribute("login") Member login, @RequestBody OrderRequestDto dto) {
-        System.out.println("OrderController.createOrderInfo");
-        System.out.println("dto = " + dto);
         if(login.getMember_login_id().equals(dto.getMember_login_id())) {
             try {
                 OrderResDto res = orderService.createOrderInfo(login.getId(), dto);
@@ -51,21 +88,20 @@ public class OrderController {
         Long amount = dto.getAmount();
         try {
             PaymentSuccessDto response = orderService.tossPaymentSuccess(paymentKey, orderId, amount);
-            System.out.println("response = " + response);
             return ResponseEntity.ok(response);
         } catch (JsonProcessingException e) {
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body(Collections.singletonMap("error", e.getMessage()));
+                    .body(Map.of("message", e.getMessage(), "code", HttpStatus.INTERNAL_SERVER_ERROR));
         } catch (Exception e) {
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body(Collections.singletonMap("error", e.getMessage()));
+                    .body(Map.of("message", e.getMessage(), "code", HttpStatus.INTERNAL_SERVER_ERROR));
         }
     }
 
     @PostMapping("/toss/cancel")
-    public ResponseEntity tossPaymentCancel(@RequestBody String orderId) {
+    public ResponseEntity tossPaymentCancel(@RequestBody CancelRequestDto dto) {
         try {
-            orderService.cancelOrderStatus(orderId);
+            orderService.cancelOrderStatus(dto.getOrderId());
             return ResponseEntity.ok().build();
         } catch (CustomLogicException e) {
             return ResponseEntity.status(HttpStatus.BAD_REQUEST)
